Use jlink to build a smaller JRE to reduce container image size