@@ -24,39 +24,18 @@ COPY wls-exporter-sidecar/ wls-exporter-sidecar/
 
 RUN mvn -B -e -C install -Ddocker-build -DskipTests=true
 
-# Install Java on top of the linux image
-FROM ghcr.io/oracle/oraclelinux:8-slim as linux
-WORKDIR /tmp
+FROM ghcr.io/oracle/oraclelinux:8-slim AS jre-build
+
+ENV JAVA_URL="https://download.java.net/java/GA/jdk18.0.1.1/65ae32619e2f40f3a9af3af1851d6e19/2/GPL/openjdk-18.0.1.1_linux-x64_bin.tar.gz"
 
 RUN set -eux; \
-    microdnf -y install gzip tar openssl jq; \
-    microdnf -y update; \
-    microdnf clean all
-
-ENV LANG="en_US.UTF-8" \
-    JAVA_HOME="/usr/local/java" \
-    PATH="/operator:$JAVA_HOME/bin:$PATH" \
-    JAVA_URL="https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-x64_bin.tar.gz"
-
-RUN set -eux; \
+    microdnf -y install gzip tar; \
     curl -fL -o /jdk.tar.gz "$JAVA_URL"; \
-    mkdir -p "$JAVA_HOME"; \
-    tar --extract --file /jdk.tar.gz --directory "$JAVA_HOME" --strip-components 1; \
-    rm /jdk.tar.gz; \
-    mkdir /usr/java; \
-    ln -sfT "$JAVA_HOME" /usr/java/default; \
-    ln -sfT "$JAVA_HOME" /usr/java/latest; \
-    rm -Rf "$JAVA_HOME/include" "$JAVA_HOME/jmods"; \
-    rm -f "$JAVA_HOME/lib/src.zip"; \
-    for bin in "$JAVA_HOME/bin/"*; do \
-        base="$(basename "$bin")"; \
-        [ ! -e "/usr/bin/$base" ]; \
-        alternatives --install "/usr/bin/$base" "$base" "$bin" 20000; \
-    done; \
-    java -Xshare:dump
+    mkdir -p /jdk; \
+    tar --extract --file /jdk.tar.gz --directory /jdk --strip-components 1; \
+    /jdk/bin/jlink --verbose --compress 2 --strip-java-debug-attributes --no-header-files --no-man-pages --output jre --add-modules java.base,java.instrument,java.management,java.naming,java.net.http,java.sql,jdk.attach,jdk.jdi,jdk.unsupported,jdk.crypto.ec,jdk.zipfs
 
-# Finally, copy the exporter sidecar and create the docker image
-FROM linux as base
+FROM ghcr.io/oracle/oraclelinux:8-slim
 
 LABEL "org.opencontainers.image.authors"="Ryan Eberhard <ryan.eberhard@oracle.com>, Russell Gold <russell.gold@oracle.com>" \
       "org.opencontainers.image.url"="https://github.com/oracle/weblogic-monitoring-exporter" \
@@ -65,6 +44,18 @@ LABEL "org.opencontainers.image.authors"="Ryan Eberhard <ryan.eberhard@oracle.co
       "org.opencontainers.image.title"="Oracle WebLogic Monitoring Exporter" \
       "org.opencontainers.image.description"="Oracle WebLogic Monitoring Exporter" \
       "org.opencontainers.image.documentation"="https://github.com/oracle/weblogic-monitoring-exporter"
+
+COPY --from=jre-build /jre jre
+
+RUN set -eux; \
+    microdnf -y update; \
+    microdnf clean all; \
+    for bin in /jre/bin/*; do \
+        base="$(basename "$bin")"; \
+        [ ! -e "/usr/bin/$base" ]; \
+        alternatives --install "/usr/bin/$base" "$base" "$bin" 20000; \
+    done; \
+    java -Xshare:dump
 
 COPY --from=build project/wls-exporter-sidecar/target/wls-exporter-sidecar.jar ./
 COPY --from=build project/wls-exporter-sidecar/target/libs ./libs
